memperbaiki bug scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,14 @@ body {
     color: #e86100;
     background: #000000;
 }
+.hide-scrollbar {
+    /*FireFox*/
+    scrollbar-width: none;
+    /*IE10+*/
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
 ::-webkit-scrollbar {
+    /*Chrome, Safari, Edge*/
     display: none;
 }
 #userPhoto {
